--- a/src/index.html
+++ b/src/index.html
@@ -76,56 +76,48 @@
 
       <div class="section" id="advantage">
 
-        <div class="container">
-
           <div class="advantage__content">
-            <div class="section__title title--center">Преимущества продукции</div>
+            <div class="advantage__title blue">Преимущества продукции</div>
 
-              <div class="advantage__list">
-                <div class="advantage-item">
-                  <div class="advantage-item__text">
-                    без красителей и консервантов
-                  </div> 
-                </div>
-                <div class="advantage-item">
-                  <div class="advantage-item__text">
-                    без вредных добавок
-                  </div> 
-                </div>
-                <div class="advantage-item">
-                  <div class="advantage-item__text">
-                    укрепляет иммунитет
-                  </div> 
-                </div>
-                <div class="advantage-item">
-                  <div class="advantage-item__text">
-                    полезно для детей
-                  </div> 
-                </div>
-                <div class="advantage-item">
-                  <div class="advantage-item__text">
-                    без глютена
-                  </div> 
-                </div>
-                <div class="advantage-item">
-                  <div class="advantage-item__text">
-                    VEGAN
-                  </div> 
-                </div>
-              </div>
+            <div class="advantage__text">
+              <p>Вся продукция "ЭкоЛето" экологичная, полезная, богатая натуральными витаминами и микроэлементами.<br>Фруктовые и овощные чипсы и сушеные ягоды обладают всеми свойствами свежих продуктов.</p>
+            </div>
 
-              <div class="advantage__wrapper">
-                <div class="advantage__text">
-                  <p>Вся продукция "ЭкоЛето" экологичная, полезная, богатая натуральными витаминами и микроэлементами. </p>
-                  <p>Фруктовые и овощные чипсы и сушеные ягоды обладают всеми свойствами свежих продуктов.</p>
-                </div>
+            <div class="advantage__list">
+              <div class="advantage-item">
+                <div class="advantage-item__text">
+                  без красителей<br>и консервантов
+                </div> 
               </div>
+              <div class="advantage-item">
+                <div class="advantage-item__text">
+                  без вредных<br>добавок
+                </div> 
+              </div>
+              <div class="advantage-item">
+                <div class="advantage-item__text">
+                  укрепляет<br>иммунитет
+                </div> 
+              </div>
+              <div class="advantage-item">
+                <div class="advantage-item__text">
+                  полезно<br>для детей
+                </div> 
+              </div>
+              <div class="advantage-item">
+                <div class="advantage-item__text">
+                  без<br>глютена
+                </div> 
+              </div>
+              <div class="advantage-item">
+                <div class="advantage-item__text">
+                  VEGAN
+                </div> 
+              </div>
+            </div>
 
           </div>
           <!-- /.advantage__content -->
-
-        </div>
-        <!-- /.container -->
 
       </div>
       <!-- /.section -->
@@ -436,14 +428,68 @@
       <div class="section" id="retail">
 
         <div class="retail__content">
-          <div class="retail__item">
-            
+          <div class="advantage__title">Розничная упаковка</div>
+
+          <div class="retail__list retail-slider">
+
+            <div class="retail-item">
+              <img src="img/retail/item-1.jpg" alt="Апельсин">
+            </div>
+
+            <div class="retail-item">
+              <img src="img/retail/item-2.jpg" alt="Яблоко">
+            </div>
+
+            <div class="retail-item">
+              <img src="img/retail/item-3.jpg" alt="Инжир">
+            </div>
+
+            <div class="retail-item">
+              <img src="img/retail/item-4.jpg" alt="Ананас">
+            </div>
+
+            <div class="retail-item">
+              <img src="img/retail/item-5.jpg" alt="Персик">
+            </div>
+
+            <div class="retail-item">
+              <img src="img/retail/item-6.jpg" alt="Мапайя">
+            </div>
+
+            <div class="retail-item">
+              <img src="img/retail/item-7.jpg" alt="Манго">
+            </div>
+
           </div>
-          <div class="section__logo">
-            <img src="img/logo.png" alt="ЭкоЛето">
-          </div>
+
         </div>
         <!-- /.retail__content -->
+
+      </div>
+      <!-- /.section -->
+
+      <div class="section" id="contacts">
+
+        <div class="contacts__content">
+          <div class="contacts__title">Контакты</div>
+
+          <div class="contacts__body">
+
+            <div class="contacts__logo">
+              <img src="img/logo.png" alt="Эколето">
+            </div>
+
+            <div class="contacts__info">
+              <div class="contacts__address"><address>г. Хабаровск, ул. Лермонтова, 3</address></div>
+              <div class="contacts__tel"><a href="tel:+89098084398">8(909)808-43-98</a></div>
+              <div class="contacts__tel"><a href="tel:+89241101881">8(924)110-18-81</a></div>
+              <div class="contacts__email"><a href="mailto:ecoleto@bk.ru">ecoleto@bk.ru</a></div>
+            </div>
+            
+          </div>
+
+        </div>
+        <!-- /.contacts__content -->
 
       </div>
       <!-- /.section -->
@@ -456,6 +502,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/jquery.fullpage.js"></script>
+  <script src="js/libs.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
