--- a/src/index.html
+++ b/src/index.html
@@ -76,8 +76,12 @@
 
       <div class="section fp-auto-height-responsive" id="advantage">
 
+        <div class="advantage__head">
+          <div class="advantage__title blue">Преимущества продукции</div>
+        </div>
+        <!-- /.retail__head -->
+
           <div class="advantage__content">
-            <div class="advantage__title blue">Преимущества продукции</div>
 
             <div class="advantage__text">
               <p>Вся продукция "ЭкоЛето" экологичная, полезная, богатая натуральными витаминами и микроэлементами.<br>Фруктовые и овощные чипсы и сушеные ягоды обладают всеми свойствами свежих продуктов.</p>
@@ -427,8 +431,13 @@
 
       <div class="section fp-auto-height-responsive" id="retail">
 
+        <div class="retail__head">
+          <div class="retail__title">Розничная упаковка</div>
+        </div>
+        <!-- /.retail__head -->
+
         <div class="retail__content">
-          <div class="advantage__title">Розничная упаковка</div>
+          
 
           <div class="retail__text"><p>Вес продукции в упаковке 30, 60 грамм</p></div>
 
