--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
         <li data-menuanchor="section-3"><a href="#section-3" class="menu__link">Технология производства</a></li>
         <li data-menuanchor="section-4"><a href="#section-4" class="menu__link">Преимущества продукции</a></li>
         <li data-menuanchor="section-5"><a href="#section-5" class="menu__link">Каталог</a></li>
+        <li data-menuanchor="section-10"><a href="#section-10" class="menu__link">Контакты</a></li>
       </ul>
     </nav>
 
@@ -30,6 +31,19 @@
       <div class="section" id="main">
 
           <div class="main">
+            <div class="main__nav">
+              <div class="main__phone">
+                <a class="main__link" href="tel:+89098084398">8(909)808-43-98</a>
+                <a class="main__link" href="tel:+89241101881">8(924)110-18-81</a>
+              </div>
+              <div class="lang">
+                <ul class="lang__list">
+                  <li><a class="lang__link rus" href="#">РУС</a></li>
+                  <li><a class="lang__link eng" href="#">ENG</a></li>
+                </ul>
+              </div>
+            </div>
+
             <div class="main__body">
               <img src="img/main-logo.png" alt="Эколето">
             </div>
@@ -481,32 +495,33 @@
 
       <div class="section fp-auto-height-responsive" id="contacts">
 
+
         <div class="contacts__content">
           <div class="contacts__title">Контакты</div>
-
-          <div class="contacts__body">
-
-            <div class="contacts__info">
-              <div class="contacts__address"><address>г. Хабаровск, ул. Лермонтова, 3</address></div>
-              <div class="contacts__tel"><a href="tel:+89098084398">8(909)808-43-98</a></div>
-              <div class="contacts__tel"><a href="tel:+89241101881">8(924)110-18-81</a></div>
-              <div class="contacts__email"><a href="mailto:ecoleto@bk.ru">ecoleto@bk.ru</a></div>
-            </div>
-
-            <div class="contacts__form">
-              <!-- <img src="img/logo.png" alt="Эколето"> -->
-              <form class="form" action="#" method="post">
-                <div class="form__title">Заказать обратный звонок</div>
-                <input class="form__tel" type="tel" name="phone" placeholder="Ваш телефон">
-                <input class="form__name" type="text" name="name" placeholder="Ваше имя">
-                <button class="form__btn">Отправить</button>
-              </form>
-            </div>
-            
+          <div class="contacts__info">
+            <div class="contacts__address"><address>г. Хабаровск, ул. Лермонтова, 3</address></div>
+            <div class="contacts__tel"><a href="tel:+89098084398">8(909)808-43-98</a></div>
+            <div class="contacts__tel"><a href="tel:+89241101881">8(924)110-18-81</a></div>
+            <div class="contacts__email"><a href="mailto:ecoleto@bk.ru">ecoleto@bk.ru</a></div>
+          </div>
+          <div class="contacts__form">
+            <form class="form" action="#" method="post">
+              <div class="form__title">Заказать обратный звонок</div>
+              <input class="form__tel" type="tel" name="phone" placeholder="Ваш телефон">
+              <input class="form__name" type="text" name="name" placeholder="Ваше имя">
+              <button class="form__btn">Отправить</button>
+            </form>
           </div>
 
+          <div class="contacts__logo">
+            <img src="img/logo.png" alt="Эколето">
+          </div>
         </div>
         <!-- /.contacts__content -->
+
+
+
+
 
       </div>
       <!-- /.section -->
