--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,10 @@
         <li data-menuanchor="section-4"><a href="#section-4" class="menu__link">Преимущества продукции</a></li>
         <li data-menuanchor="section-5"><a href="#section-5" class="menu__link">Каталог</a></li>
         <li data-menuanchor="section-10"><a href="#section-10" class="menu__link">Контакты</a></li>
+        <div class="nav__phone">
+          <a class="nav__link" href="tel:+89098084398">8(909)808-43-98</a>
+          <a class="nav__link" href="tel:+89241101881">8(924)110-18-81</a>
+        </div>
       </ul>
     </nav>
 
