--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,12 @@
           <div class="company__content">
             <div class="company__title">О компании</div>
             <div class="company__text">
-              <p><span>ООО «ЭкоЛето»</span> - промышленная компания по производству широкого спектра экологически чистых продуктов питания без примесей и консервантов.</p>
+              <p><span>ООО «ЭкоЛето»</span> — промышленная компания по производству широкого спектра экологически чистых продуктов питания без примесей и консервантов.</p>
               <p>Основная ассортиментная линейка - производство дегидрированных фруктовых и овощных чипсов и сушеной ягоды.</p>
               <p>Сушка производится при низких температурах до 40 градусов, что позволяет сохранить витамины и полезные микроэлементы свежих фруктов, овощей, ягод в конечном продукте.</p>
+            </div>
+            <div class="company__slogan">
+              <p><span>Эколето</span> — фабрика полезностей</p>
             </div>
             <div class="company__logo">
               <img src="img/logo.png" alt="ЭкоЛето">
@@ -499,7 +502,6 @@
 
       <div class="section fp-auto-height-responsive" id="contacts">
 
-
         <div class="contacts__content">
           <div class="contacts__title">Контакты</div>
           <div class="contacts__info">
@@ -522,10 +524,6 @@
           </div>
         </div>
         <!-- /.contacts__content -->
-
-
-
-
 
       </div>
       <!-- /.section -->
@@ -571,8 +569,12 @@
           </div>
           <form class="form" action="#">
             <div class="form__title">Заказать Ананас</div>
-            <input class="form__tel" type="tel" name="phone" placeholder="Ваш телефон">
             <input class="form__name" type="text" name="name" placeholder="Ваше имя">
+            <div class="form__block">
+              <input class="form__tel" type="tel" name="phone" placeholder="Ваш телефон">
+              <input class="form__email" type="email" name="email" placeholder="Ваш E-Mail">
+            </div>
+            <textarea class="form__message" name="message" placeholder="Напишите сообщение..."></textarea>
             <button class="form__btn">Заказать</button>
           </form>
         </div>
